tests/ui/parser/shebang/shebang-doc-comment.rs
#!///bin/bash
[allow(unused_variables)]
//~^ ERROR expected item, found `[`

//@ reference: shebang.syntax-description
